Added theory notebook
- code cleaning including typing heading

--- a/examples/notebook3.ipynb
+++ b/examples/notebook3.ipynb
@@ -94,14 +94,14 @@
     "\n",
     "Bounds are checked at each time step in the simulation, by simply moving unit positions of units outside the box back into it:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "B(x, y)=\\begin{cases}\n",
     "X_{min} & x < X_{min} \\\\\n",
     "X_{max} & x > X_{max} \\\\\n",
     "Y_{min} & y < Y_{min} \\\\\n",
     "Y_{max} & y > Y_{max} \n",
     "\\end{cases}\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "Assuming movement speeds are relatively low, this keeps every unit in the plane."
    ]
@@ -1596,54 +1596,54 @@
     "\n",
     "Mathematically, movement calculations are *currently* determined at timestep $t$ with $u \\in [x, y]$ as:\n",
     "\n",
-    "$$\n",
-    "\\dot{u}_{i,t}\\approx s_i \\left(1-\\frac{z_{i}}{2}\\right) \\frac{\\delta u_{i,t}}{||\\delta u_{i,t} ||}\n",
-    "$$\n",
+    "\\begin{align}\n",
+    "\\dot{u}_{i,t} \\approx s_i \\left(1-\\frac{z_{i}}{2}\\right) \\frac{\\delta u_{i,t}}{||\\delta u_{i,t} ||}\n",
+    "\\end{align}\n",
     "\n",
     "where $s_i$ is the unit base speed, $\\delta u_i$ is the directional derivative with respect to it's enemy, $||\\delta u_i ||$ is the distance of unit $i$ from the enemy $j$, and $z_{i}$ is the height measured at the node nearest to $u_i$. indices of $z$ are determined as:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "z_{ind}=\\arg \\min \\left|u_{i,t}-\\Omega \\right|\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $\\Omega$ is the meshgrid domain. Note that $z$ can be from a function defined by the user as $z=f(\\Omega)$, or generated from random Gaussian multivariate distributions:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "z_{i,d} \\sim \\mathcal{N}(\\mathbf{\\mu}, \\mathbf{\\Sigma})\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $\\mathbf{\\Sigma}$ is the covariance matrix of shape $(2,2)$. Given $d$-Gaussian densities where bounds $\\Omega \\in [X_{min}, X_{max}, Y_{min}, Y_{max}]$ are defined, we randomly sample parameters $\\mathbf{\\mu}$ and $\\mathbf{\\Sigma}$:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\mu_x \\sim \\mathcal{U}(0, X_{max}-X_{min}) + X_{min} \\\\\n",
     "\\mu_y \\sim \\mathcal{U}(0, Y_{max}-Y_{min}) + Y_{min} \\\\\n",
     "\\Sigma_{xx} \\sim \\mathcal{U}(1, 2) \\, s_x \\\\\n",
     "\\Sigma_{yy} \\sim \\mathcal{U}(1, 2) \\, s_y \\\\\n",
     "\\Sigma_{xy} \\equiv \\Sigma_{yx} \\sim \\mathcal{U}(0, 1)\\, \\mathcal{C}(0, 1)\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\mathcal{C}(0, 1)=\\begin{cases}\n",
     "-1 & \\mathcal{C} < 0 \\\\\n",
     "1 & \\mathcal{C} >= 0\n",
     "\\end{cases}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "and acts to flip the direction of the gaussian ellipse. Note that scaling parameters $s_x$ and $s_y$ are pre-decided by slope $m$ and intercept $b$ such that as $d$ increases, $s_x$ and $s_y$ decrease. These are determined using a linear model:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "s_x=\\frac{(X_{max}-X_{min})}{(X_{max}-X_{min})m + b} \\\\\n",
     "s_y=\\frac{(Y_{max}-Y_{min})}{(Y_{max}-Y_{min})m + b}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "Slope $m$ and intercept $b$ are calculated from the following range $I \\in [0, 300]$ and $J \\in [5, 2]$ as $J=Im +b$ using linear degree. Once all this is done, the probability densities at each point $(i, j)$ are summed and scaled using **minmax** scaling in the range $[0, 1]$:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\bar{z}_i = \\sum_d z_{i, d} \\\\\n",
     "z_i = \\frac{\\bar{z}_i - \\min \\bar{z}_i}{\\max \\bar{z}_i - \\min \\bar{z}_i}\n",
-    "$$"
+    "\\end{align}"
    ]
   },
   {
@@ -5301,7 +5301,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
