--- a/examples/notebook4.ipynb
+++ b/examples/notebook4.ipynb
@@ -416,28 +416,28 @@
     "\n",
     "Armor exists as a parameter that goes $\\alpha_i \\in [0, \\infty]$, and damage calculations delivered against unit $j$ from attacking unit $i$ (from 0.3.4) move from:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "H_j - d_i\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "to\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "H_j - d_i \\left(\\frac{z_i - z_j}{2} + 1 \\right)\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $d_i$ is the base damage, $z_i$ and $z_j$ is the height at which unit $i$ and $j$ sit, respectively. Further to this, if armor rating $\\alpha_j > 0$, then:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\alpha_j - d_i \\left(\\frac{z_i - z_j}{2} + 1 \\right), \\quad \\alpha_j > 0\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where the right-hand side is $<= 0$, the difference is subtracted away from $H_j$. Thus our final *modus operandi* becomes:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\alpha_j - d_i \\left(\\frac{z_i - z_j}{2} + 1 \\right), \\quad \\alpha_j > 0 \\\\\n",
     "H_j - d_i \\left(\\frac{z_i - z_j}{2} + 1 \\right), \\quad \\alpha_j <= 0 \\\\\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "In future versions, we may adjust this to reduce the amount of damage done to armor vs health, consider options such as *pierce damage*, which can do more to armor, etc."
    ]
@@ -460,6 +460,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
