--- a/teaching/01 Dataset, Unit, Basic Simulation.ipynb
+++ b/teaching/01 Dataset, Unit, Basic Simulation.ipynb
@@ -555,15 +555,17 @@
     "\n",
     "The euclidean distance is defined mathematically as:\n",
     "\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "d(\\textbf{p}, \\textbf{q}) = d(\\textbf{q}, \\textbf{p}) = \\sqrt{(q_1 - p_1)^2 + (q_2 - p_2)^2 + \\dots + (q_n - p_n)^2} = \\sqrt{\\sum_{i=1}^n \\left(q_i - p_i \\right)^2}\n",
-    "$$\n",
+    "\\tag{1}\n",
+    "\\end{align*}\n",
     "\n",
     "where $n$ refers to the number of dimensions. Contrasted to the **magnitude** of a vector, which measures it's length:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation*}\n",
     "||\\textbf{p}||=\\sqrt{p_1^2 + p_2^2 + \\dots + p_n^2} = \\sqrt{\\textbf{p} \\cdot \\textbf{p}}\n",
-    "$$"
+    "\\tag{2}\n",
+    "\\end{equation*}"
    ]
   },
   {
@@ -589,12 +591,11 @@
     "\n",
     "The directional derivative $\\nabla_{\\textbf{u}} f(x_0, y_0)$ is the rate at which the function $f(x, y)$ changes at a point $(x_0, y_0)$ in the direction $\\textbf{u}$. It is defined as:\n",
     "\n",
-    "$$\n",
     "\\begin{align}\n",
     "\\nabla_{\\mathbf{u}} f \\equiv \\nabla f \\cdot \\frac{\\mathbf{u}}{|\\mathbf{u}|} \\\\\n",
     "= \\lim_{h \\to 0} \\frac{f(\\mathbf{x} + h \\, \\hat{\\mathbf{u}}) - f(\\mathbf{x})}{h}\n",
+    "\\tag{3}\n",
     "\\end{align}\n",
-    "$$\n",
     "\n",
     "where $\\mathbf{u}=[\\mathbf{x}, \\mathbf{y}]$. In our case, within *Euclidean space*, the directional derivative is respective to the vector $\\mathbf{v}$ after normalization, so it's independent of it's magnitude and depends only on the direction.\n",
     "\n",
@@ -602,9 +603,9 @@
     "\n",
     "Since we exclude the magnitude from our calculation; we normalize for it:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\Delta \\mathbf{u}_{i}^{\\text{norm}}(\\mathbf{u_i},\\mathbf{u}_j)=\\frac{\\mathbf{u}_j - \\mathbf{u}_i}{||\\mathbf{u}_i - \\mathbf{u}_j||}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "This is essentially the *negative normalized direction* of the unit. We make it negative such that the unit moves *towards* the enemy rather than away. Note that it is **essential** that $\\mathbf{u}_j - \\mathbf{u}_i$ rather than $\\mathbf{u}_i - \\mathbf{u}_j$, otherwise the unit will move in the *other direction away from the target*."
    ]
@@ -627,9 +628,9 @@
     "\n",
     "Determining the change in movement in time is a dynamic process, and we determine this using these formulae:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\dot{\\mathbf{u}}_i = \\frac{d\\mathbf{u}_i}{dt}(\\mathbf{u}_i, \\mathbf{u}_j) \\approx s_i \\, \\Omega \\,  \\delta t \\, \\Delta \\mathbf{u}_{i}^{\\text{norm}}(\\mathbf{u_i},\\mathbf{u}_j) \\quad \\forall i \\\\\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $s_i$ is the base speed of the unit $i$, $\\Omega$ is a global parameter that could be attributed to terrain etc., $\\delta t$ is the change in time step (default to 1), unit $j$ is the target that unit $i$ wishes to draw towards, and where $\\Delta \\mathbf{u}_{i}^{\\text{norm}}(\\mathbf{u_i},\\mathbf{u}_j)$ is our normalized direction for unit $i$. In essense, this is simply the 'speed' of the unit multiplied by the negative direction of the opponent to move in that direction. Note that $ \\mathbf{u}_j$ doesn't have to be another Unit, but could be a waypoint for moving a Unit to a particular landmark or location."
    ]
@@ -1142,7 +1143,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
