--- a/teaching/02 Improvements to Unit, Simulation.ipynb
+++ b/teaching/02 Improvements to Unit, Simulation.ipynb
@@ -147,9 +147,9 @@
     "\n",
     "For simplicity, we assign each unit a random enemy, as:\n",
     "\n",
-    "$$\n",
-    "T_i \\sim \\arg \\mathcal{U}(0, N_j-1)\n",
-    "$$\n",
+    "\\begin{align}\n",
+    "T_i \\sim \\mathcal{U}(0, N_j-1)\n",
+    "\\end{align}\n",
     "\n",
     "where $T_i$ is the index of the $j$th target for unit $i$, within the $N$-space of the enemies. $\\mathcal{U}$ refers to the uniform distribution, in the sense that there is an *equal chance that any enemy can be picked*.\n",
     "\n",
@@ -433,23 +433,23 @@
     "\n",
     "A gaussian or normal distribution is a common continuous probability that can be used to represent real-valued random variables. Informally known as the bell-curve, it is described as:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "f(x|\\mu, \\sigma^2)=\\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $\\mu$ is the mean or expectation, $\\sigma^2$ is the variance. A special case exists where $f(x|0, 1)$, known as the standard normal distribution:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "f(x|0, 1)=\\frac{1}{\\sqrt{2 \\pi}}e^{-\\frac{1}{2}x^2}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "### Sampling from a Gaussian distribution\n",
     "\n",
     "The normal distribution is often referred to as $\\mathcal{N}(\\mu, \\sigma^2)$. Thus our position coordinates $\\mathbf{u}$ can be initialized as:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "\\mathbf{u} \\sim \\mathcal{N}(\\mu, \\sigma^2)\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "Separate $\\mu$ and $\\sigma^2$ can be given to each dimension in $\\mathbf{u}$ if you want the distribution to lie off of the $x=y$ axis. All of this is achieved using the `np.random.normal` function, specifying $\\mu$, $\\sigma^2$, and a sample size $n$."
    ]
@@ -723,6 +723,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
