--- a/teaching/03 Plotted Simulations and Performance.ipynb
+++ b/teaching/03 Plotted Simulations and Performance.ipynb
@@ -7063,9 +7063,9 @@
     "\n",
     "For example, we may wish to instead get *units to target their nearest enemy* once their target has died. Mathematically in 2-dimensions we would describe this as:\n",
     "\n",
-    "$$\n",
+    "\\begin{align}\n",
     "T_i = \\arg \\min \\sqrt{(x_i - x_j)^2 + (y_i - y_j)^2} \\quad \\forall j\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "where $T_i$ is the index of the $j$th targeted unit for the use of unit $i$. Note that this space should only be searched among *alive* units for computational efficiency. This is equivalent to the **euclidean distance** metric.\n",
     "\n",
@@ -11620,6 +11620,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
