--- a/Theory.ipynb
+++ b/Theory.ipynb
@@ -58,7 +58,7 @@
     "For the primary targeting algorithm, this distance quantity is something to be minimized with respect to all other potential enemies:\n",
     "\n",
     "\\begin{align}\n",
-    "\\arg \\min \\mathcal{D}(\\mathbf{u}_i, \\mathbf{u}_j) \\quad \\forall j \\tag{4}\n",
+    "\\arg \\min \\mathcal{D}_i(\\mathbf{u}_i, \\mathbf{u}_j) \\quad \\forall j \\tag{4}\n",
     "\\end{align}\n",
     "\n",
     "\n",
@@ -131,39 +131,39 @@
     "Let $a_i \\in [0, 1]$ be the base accuracy modifier of unit $i$, and let $\\mathcal{H} \\in \\mathbb{R}$ be some global hit penalty. Then a chance to perform a successful hit $h_i(t)$ at time $t$ is:\n",
     "\n",
     "\\begin{align}\n",
-    "h_i(t) = a_i \\left(1-a_j^{-1} \\right) \\left(1-\\frac{\\mathcal{D}(\\mathbf{u}_i, \\mathbf{u}_j)}{\\mathcal{H}} \\right)\n",
+    "h_i(t) = \\left[ a_i \\left(1-a_j^{-1} \\right) \\left(1-\\frac{\\mathcal{D}(\\mathbf{u}_i, \\mathbf{u}_j)}{\\mathcal{H}} \\right) \\right]\n",
     "\\end{align}\n",
     "\n",
     "where $a_j^{-1} \\in [0, 1]$ is the *dodge chance* of enemy unit $j$. here we see that the further a unit is away, the lower the resulting hit chance will be. The fun doesn't stop there though, the attacker now needs to overcome a random roll from a *uniform distribution*:\n",
     "\n",
-    "\\begin{align}\n",
-    "\\begin{cases}\n",
-    "h_i(t) > \\mathcal{U}(0, 1) & \\text{deal damage} \\\\\n",
-    "\\text{else} & \\text{do nothing}\n",
-    "\\end{cases}\n",
-    "\\end{align}\n",
-    "\n",
     "### Determining damage output\n",
     "\n",
-    "Let $d_i$ be the base damage modifier for unit $i$ and let $v_i(t)$ be the *vitality* or health of unit $i$ at time $t$. Then the initial damage calculation is:\n",
+    "Let $d_j$ be the base damage modifier for unit $j$ and let $v_i(t)$ be the *vitality* or health of unit $i$ at time $t$. Then the initial damage calculation is:\n",
     "\n",
     "\\begin{align}\n",
-    "\\dot{d}_i(t)=d_i \\left(1+ \\frac{z_i(t)-z_j(t)}{2} \\right)\n",
+    "\\dot{d}_j(t)=d_j \\left(1+ \\frac{z_j(t)-z_i(t)}{2} \\right) \\quad \\text{s.t.} \\,\\, h_j(t) > \\mathcal{U}(0,1)\n",
     "\\end{align}\n",
     "\n",
     "once again, height plays a significant role in reducing or increasing initial role damage output. However there is another variable inserted into play: *armour*.\n",
     "\n",
     "### Armour considerations\n",
     "\n",
-    "Let $A_j(t)$ be the amount of armour enemy unit $j$ has remaining at time $t$. Then:\n",
+    "Let $A_i(t)$ be the amount of armour unit $i$ has remaining at time $t$, then it's difference for step $t$ is calculated as:\n",
     "\n",
-    "\\begin{align}\n",
-    "v_j(t+1)=\n",
+    "$$\n",
+    "A_i(t+1) = A_i(t) - \\dot{d}_j(t)\n",
+    "$$\n",
+    "\n",
+    "Then using this difference, we determine whether health is affected:\n",
+    "\n",
+    "$$\n",
+    "v_i(t+1)=\n",
     "\\begin{cases}\n",
-    "A_j(t) > 0 & A_j(t) - \\dot{d}_i(t) \\\\\n",
-    "\\text{else} & v_j(t) - \\dot{d}_i(t)\n",
+    "A_i(t+1) > 0 & v_i(t) \\\\\n",
+    "A_i(t+1) \\le 0 \\text{ and } A_i(t) > 0 & v_i(t) - A_i(t+1) \\\\\n",
+    "\\text{else} & v_i(t) - \\dot{d}_j(t)\n",
     "\\end{cases}\n",
-    "\\end{align}\n",
+    "$$\n",
     "\n",
     "This calculates such that the overflow over from lost armour is also deducted from the vitality pool."
    ]
@@ -252,7 +252,7 @@
     "\n",
     "\\begin{align}\n",
     "\\begin{cases}\n",
-    "\\mathcal{D}(\\mathbf{u}_i, \\mathbf{u}_j) > \\bar{r}_i & \\mathbf{u}_i(t) + \\dot{\\mathbf{u}}_i(t) \\\\\n",
+    "\\mathcal{D}(\\mathbf{u}_i, \\mathbf{u}_j) > \\bar{r}_i & \\mathbf{u}_i(t) +\\frac{d\\mathbf{u}_i}{dt} \\\\\n",
     "\\text{else} & \\text{attack roll}\n",
     "\\end{cases}\n",
     "\\tag{9}\n",
@@ -285,18 +285,11 @@
     "\n",
     "For case one, the unit moves closer to it's opponent when it's out of range, **but** moves away from it's opponent when the oppoenent is within range of itself, leaving the window opportunity when itself is close enough but the opponent is not, maximising potential damage output."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
