Added Composite, Sampling

--- a/Theory.ipynb
+++ b/Theory.ipynb
@@ -172,6 +172,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Terrains\n",
+    "\n",
+    "Prior to v0.3.6, terrains were calculated using a mixture of Gaussian densities. This was slow and expensive to compute and a significant bottleneck prior to even running the simulation. From 0.3.6 onwards we generate terrains using **Perlin noise**. This is achieved in the following steps.\n",
+    "\n",
+    "#### Smooth noise\n",
+    "\n",
+    "Firstly we define a uniformly-distributed matrix $\\mathbf{U} \\in \\mathbb{R}^{X, Y}$ sampled from the uniform distribution $\\mathcal{U}(0, 1)$.\n",
+    "\n",
+    "Smooth noise for a given position $(x, y)$ within domain $(X, Y)$ is calculated as:\n",
+    "\n",
+    "$$N_s(x, y)=f_x f_y U_{x_0, y_0} + (1-f_x) f_y U_{y_0,x_1} + f_x (1-f_y) U_{y_1, x_0} + (1 - f_x) (1-f_y) U_{y_1, x_1}$$\n",
+    "\n",
+    "where $f_x= x- \\text{int}(x)$ is the fractional part of $x$, and similarly with $f_y$. The indices by which the uniform random matrix $\\bf U$ are accessed are labelled $(x_0, x_1, y_0, y_1)$. They are calculated as:\n",
+    "$$x_0=\\text{int}(x) + X \\, \\% \\, X \\\\\n",
+    "y_0=\\text{int}(y) + Y \\, \\% \\, Y \\\\\n",
+    "x_1=(x_0 + X - 1) \\, \\% \\, X \\\\\n",
+    "y_1=(y_0 + Y - 1) \\, \\% \\, Y \\\\\n",
+    "$$\n",
+    "\n",
+    "#### Turbulence\n",
+    "\n",
+    "We can add turbulence to the height noise at $(x, y)$, utilising a provided scale parameter $S_0$ via iteration:\n",
+    "\n",
+    "1. Set values $v=0$, $S_n=S_0$.\n",
+    "1. While $S_n>=1$, incrementing $n$ do:\n",
+    "    1. Update $v$ by function $N_s \\left(\\frac{x}{S_n}, \\frac{y}{S_n} \\right) \\, S_n$\n",
+    "    2. Divide $S_{n+1}=\\frac{S_n}{2}$\n",
+    "2. Return $z_{xy}=\\frac{128v}{S_0}$\n",
+    "\n",
+    "#### Perlin map\n",
+    "\n",
+    "We simply iterate $\\forall x \\in X$ and $\\forall y \\in Y$, calculating $Z(x, y, S_0)=z_{xy}$. We finally perform minmax scaling to scale matrix $\\bf Z$ into the $[0, 1]$ range. This means the lowest map point is 0 and the highest point is 1. By default we use $S_0=\\frac{X}{3}$ to give nice-looking scaled maps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tiling\n",
+    "\n",
+    "In order to determine the height location of each unit, it holds an index to the (x, y) coordinate of the height map $\\bf Z$. Prior to v0.3.6 these indices were calculated using the difference between the units position $x_i$ and a mesh grid of the height domain. This was highly expensive and around 50\\% of the performance increase is attributable to this change.\n",
+    "\n",
+    "Now we use **lerp** or Linear intERPolation to approximate the best tile index for every unit. Given the height map $\\bf Z$ existing within domain bounds $\\Omega$ where the range $(A_0, A_1)$ describes real-space and $(B_0, B_1)$ describes index-space, we can linearly map between domains $A \\to B$ given value $x_i$ as:\n",
+    "\n",
+    "$$\n",
+    "\\hat{x}_i = A_1 + (x_i - A_0) \\left(\\frac{B_1-A_1}{B_0 - A_0} \\right)\n",
+    "$$\n",
+    "\n",
+    "where in this case the $A$ domain is the x-axis and $B$ domain is the *index* axis, this is repeated for the y-dimension. This means $\\hat{x}_i$ must be truncated to an integer so as to access such that a unit's height position is $z_i = Z_{\\hat{x}_i, \\hat{y}_i}$ like so."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Unit in range\n",
     "\n",
     "Let $r_i$ be the base range modifier of unit $i$.\n",
@@ -183,62 +238,6 @@
     "\\end{align}\n",
     "\n",
     "where $z_i(t)$ is the units' current $z$ height coordinate. This means for larger values of $z_i^2(t)$, the adjusted range is exponentially higher."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creating a Terrain\n",
-    "\n",
-    "Let $\\Omega$ be the domain within which the world space is created and units will inhabit. By default we will simulate a pseudo hill-like plain by creating $d$-Gaussian densities on the $z$-plane. This is more formally known as defining a *joint probability density function*.\n",
-    "\n",
-    "### Multivariate Gaussian densities\n",
-    "\n",
-    "The multivariate normal distribution is said to be \"non-degenerate\" when the symmetric covariance matrix ${\\displaystyle{\\boldsymbol {\\Sigma }}}$ is positive-definite. In this case the distribution has density:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\mathcal{G}_{\\mathbf{X}}(x_1, \\dots, x_d)=\\frac{\\exp\\left(-\\frac{1}{2} \\left(\\mathbf{x}-\\mathbf{\\mu} \\right)^{\\text{T}}\\mathbf{\\Sigma}^{-1} \\left(\\mathbf{x}-\\mathbf{\\mu} \\right)\\right)}{\\sqrt{\\left(  2 \\pi \\right)^d |\\mathbf{\\Sigma}|}}\n",
-    "\\end{align}\n",
-    "\n",
-    "where $\\mathbf{X}$ is a real $d$-dimensional column vector,  $\\mathbf{\\mu}$ is the mean of $\\mathbf{X}$ and $|\\mathbf{\\Sigma}|$ is the determinant of covariance matrix $\\mathbf{\\Sigma}$. Thus we define the joint probability density function as the integral sum of all the sub-parts:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\mathbf{I}=\\text{Pr}(X_1, \\dots, X_d \\in \\Omega) = \\int_{\\Omega}\\mathcal{G}_{\\mathbf{X}_1, \\dots, \\mathbf{X}_d}(x_1, \\dots, x_d) dx_1, \\dots, dx_d \\approx \\sum_{k=1}^d \\mathcal{G}_{\\mathbf{X}_k} (x_1, \\dots, x_d)\n",
-    "\\end{align}\n",
-    "\n",
-    "### Discretization of Probability Density\n",
-    "\n",
-    "Given discretization of meshgrid $\\Omega$ using $\\mathbf{I}$, the point at which unit $i$ is closest to node $m$ is:\n",
-    "\n",
-    "\\begin{align}\n",
-    "z_{im}^{\\text{ind}}=\\arg \\min |\\mathbf{u}_i(t)-\\mathbf{I} |\n",
-    "\\end{align}\n",
-    "\n",
-    "such that $z_i(t)=\\mathbf{I}\\left(z_{im}^{\\text{ind}}\\right)$. Covariance matrix $\\mathbf{\\Sigma} \\in \\mathbb{R}^{2 \\times 2}$ in the 2-D case, in addition to $\\mathbf{\\mu} \\in \\mathbb{R}^{2}$ whose parameters we sample from a *uniform distribution*. Hereby we refer to a generic dimension as $k$:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\mu_k \\sim \\mathcal{U} \\left(0, k_{\\text{max}}-k_{\\text{min}} \\right) + k_{\\text{min}} \\\\\n",
-    "\\Sigma_{kk}\\sim \\mathcal{U}(1,2) \\psi_k \\\\\n",
-    "\\Sigma_{xy}\\equiv \\Sigma_{yx} \\sim \\mathcal{U}(0,1) \\mathcal{C}(0, 1)\n",
-    "\\end{align}\n",
-    "\n",
-    "where \n",
-    "\n",
-    "\\begin{align}\n",
-    "\\mathcal{C}(0,1)=\\begin{cases}\n",
-    "-1 & \\mathcal{C} < 0 \\\\\n",
-    "1 & \\mathcal{C} \\ge 0\n",
-    "\\end{cases}\n",
-    "\\end{align}\n",
-    "\n",
-    "and acts to flip the direction of the gaussian ellipse. Note that scaling parameters $\\psi_k$ are pre-determined by slope $\\zeta$ and intercept $\\gamma$. These are determined using a linear model:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\psi_k=\\frac{k_{\\text{max}} - k_{\\text{min}}}{\\left(k_{\\text{max}} - k_{\\text{min}}\\right)\\zeta + \\gamma}\n",
-    "\\end{align}\n",
-    "\n",
-    "where $\\zeta \\in [0, 300]$ is determined from the aforementioned range as is $\\gamma \\in [5, 2]$ using the normal linear model $\\psi=k\\zeta+\\gamma$."
    ]
   },
   {
