--- a/examples/Version.ipynb
+++ b/examples/Version.ipynb
@@ -10,7 +10,6 @@
     "\n",
     "- Python (>=3.5)\n",
     "- NumPy (>=1.11.0)\n",
-    "- SciPy (>=1.3)\n",
     "- Pandas (>=0.25.1)\n",
     "- Matplotlib (>=3.1.1)\n",
     "- Numba (>=0.45)\n",
@@ -29,7 +28,6 @@
     "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy\n",
     "import matplotlib\n",
     "import numba\n",
     "import pytest"
@@ -62,7 +60,6 @@
     "    \"python\": sys.version,\n",
     "    \"numpy\": np.__version__,\n",
     "    \"pandas\": pd.__version__,\n",
-    "    \"scipy\": scipy.__version__,\n",
     "    \"matplotlib\": matplotlib.__version__,\n",
     "    \"numba\": numba.__version__,\n",
     "    \"pytest\": pytest.__version__\n",
@@ -79,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
